<resources>
    <string name="app_name">Kotlin Messenger Client</string>

    <string name="prompt_login">Login</string>
    <string name="prompt_display_name">Display Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_chatname">Chat Name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_create_chat">Create chat</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_user_id">Login can not be empty!</string>
    <string name="invalid_password">Password can not be empty!</string>
    <string name="invalid_display_name">Display name can not be empty!</string>
    <string name="invalid_chat_name">Chat name can not be empty!</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">"Register failed!"</string>
    <string name="login_after_register_failed">Successfully registered, but login failed!</string>
    <string name="create_chat_failed">Chat creation failed!</string>

    <string name="title_activity_settings">Settings</string>
    <string name="messenger_header">Messenger</string>
    <string name="server_url">Server URL</string>

    <string name="title_activity_messages">ChatActivity</string>

    <string name="action_settings">Settings</string>
    <string name="sign_in_action">Sign In</string>
    <string name="sign_out_action">Sign Out</string>
    <string name="settings_action">Settings</string>
    <string name="new_message_hint">Type your message</string>
    <string name="send_message_button">Send message</string>
    <string name="register_link">Register</string>
    <string name="join_chat">Join</string>
    <string name="appearance_header">Appearance</string>
    <string name="no_messages">No messages</string>
    <string name="user_pronoun">You</string>
    <string name="update_chat_after_creatin_failed">Failed to update chats after successful creation</string>
    <string name="enter_user_id_hint">Enter user ID</string>
    <string name="title_activity_invite">Invite to chat</string>
    <string name="select_user_to_add_to_chat">Select user to add to chat:</string>
    <string name="sign_out_confirm">Do you really want to Sign Out?</string>
    <string name="leave_chat_confirm">Do you really want to leave the chat?</string>
    <string name="no_matching_entries">No matching entries found</string>
    <string name="minimum_chars">Enter at least 3 characters to start the search</string>
</resources>
